crates/cairn-core/src/domain/flush_plan/snapshots/cairn_core__domain__flush_plan__diff__tests__diff_patch_session_md.snap
---
source: crates/cairn-core/src/domain/flush_plan/diff.rs
expression: md
---
# FlushPlan 01HQZK000000000000000000VP

- **Mode:** `HumanReview`
- **Issuer:** `agt:claude-code:opus-4-7:reviewer:v1`
- **Issued:** 2026-05-04T12:00:00Z
- **Expires:** 2026-05-04T12:05:00Z
- **Reason:** `UserIngest`
- **Mutations:** 1

## Mutation 0

- **Kind:** patch
- **Session:** `01JTS6R4J70000000000000000`
- **Replace:** `draft` -> `final` (first)
